packages/preview/molfig/0.1.0/examples/data/README.md
# Example Structure Data

The files in this directory are example molecular structure data used by Molfig examples, documentation, and regression checks.

Source: RCSB PDB / wwPDB PDB archive

License/dedication: CC0 1.0 Universal Public Domain Dedication

RCSB PDB policies: https://www.rcsb.org/pages/policies

CC0 1.0: https://creativecommons.org/publicdomain/zero/1.0/

RCSB PDB states that data files in the PDB archive are available under CC0 1.0.
RCSB PDB also encourages attribution to the original structure-data authors where possible. No endorsement by the authors, RCSB PDB, wwPDB, or Creative Commons is implied.

| File | PDB ID | Format | PDB DOI | Structure authors / status |
| --- | --- | --- | --- | --- |
| `1crn.bcif` | 1CRN | BinaryCIF | https://doi.org/10.2210/pdb1CRN/pdb | Hendrickson, W.A.; Teeter, M.M. Primary citation: Teeter, M.M. (1984) Proc Natl Acad Sci U S A 81:6014-6018. Article DOI: https://doi.org/10.1073/pnas.81.19.6014 |
| `1FYY.cif` | 1FYY | mmCIF | https://doi.org/10.2210/pdb1FYY/pdb | Volk, D.E.; Rice, J.S.; Luxon, B.A.; Yeh, H.J.C.; Liang, C.; Xie, G.; Sayer, J.M.; Jerina, D.M.; Gorenstein, D.G. Primary citation: Biochemistry 39:14040-14053 (2000). Article DOI: https://doi.org/10.1021/bi001669l |
| `9R1O.pdb` | 9R1O | PDB | https://doi.org/10.2210/pdb9R1O/pdb | Petrenas, R.; Ozga, K.; Chubb, J.J.; Woolfson, D.N. Literature status in the included PDB file: to be published. |
| `9Z4O.pdb` | 9Z4O | PDB | https://doi.org/10.2210/pdb9Z4O/pdb | Ge, Y.; de Almeida Magalhaes, T.; Wu, H.; Yadav, G.P.; Wang, Z.; Salic, A.; Jiang, J.; Huang, P. Literature status in the included PDB file: to be published. |

Suggested wording:

```text
Structural data source: RCSB PDB / wwPDB, PDB ID <ID>,
https://doi.org/10.2210/pdb<ID>/pdb. PDB archive data files are available
under CC0 1.0.
```
